# vimtg

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: dev-loop.sh
scripts/prompts/: desloppify.md  phase-00.md  phase-01a.md  phase-01b.md  phase-01c.md  phase-02a.md  phase-02b.md  phase-03a.md  phase-03b.md  phase-03c.md  phase-04.md  phase-05a.md  phase-05b.md  phase-06.md  phase-07.md  phase-08a.md  phase-08b.md  phase-09.md  phase-10.md
src/vimtg/: __main__.py  cli.py
src/vimtg/config/: paths.py  settings.py  settings_writer.py
src/vimtg/data/: card_mapper.py  card_repository.py  database.py  deck_repository.py  schema.py  (+1 more)
tests/: conftest.py  test_cli_commands.py  test_smoke.py
tests/config/: test_settings.py  test_settings_writer.py
tests/data/: test_card_repository.py  test_database.py  test_deck_repository.py  test_scryfall_sync.py
tests/domain/: test_analytics.py  test_card.py  test_deck.py  test_errors.py  test_snapshot.py
tests/editor/: test_buffer.py  test_commands.py  test_config_options.py  test_cursor.py  test_dot_repeat.py  test_help.py  test_keymap.py  test_keymaps.py  test_macros.py  test_marks.py  test_modes.py  test_motions.py  test_operators.py  test_registers.py  test_slug.py  test_text_objects.py
tests/fixtures/: sample_burn.deck  scryfall_sample.json
tests/services/: test_analytics_service.py  test_deck_service.py  test_history_service.py  test_import_export.py  test_search_service.py
tests/tui/: test_app.py  test_deck_renderer.py  test_key_translator.py  test_widgets.py
(+55 files in other folders)
