[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vimtg"
version = "0.1.0"
description = "Vim-powered TUI Magic: The Gathering deck builder"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=1.0.0",
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
vimtg = "vimtg.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/vimtg"]
